--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "id": "install-libs",
             "metadata": {},
             "outputs": [],
@@ -13,291 +13,53 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "id": "setup-ngrok-blynk",
             "metadata": {},
             "outputs": [
                 {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "🔄 Đang khởi tạo Ngrok & cập nhật Blynk...\n",
-                        "==================================================\n",
-                        "✅ Ngrok Tunnel: https://maye-leptorrhine-nauseatedly.ngrok-free.dev\n",
-                        "📹 Link Video: https://maye-leptorrhine-nauseatedly.ngrok-free.dev/video\n",
-                        "✅ Đã cập nhật Widget Video (V1) trên Blynk!\n",
-                        "==================================================\n",
-                        "🎉 Setup hoàn tất! Chạy CELL 3 để bắt đầu phát hiện.\n"
-                    ]
-                },
-                {
-                    "data": {
-                        "text/plain": [
-                            "'https://maye-leptorrhine-nauseatedly.ngrok-free.dev'"
-                        ]
-                    },
-                    "execution_count": 2,
-                    "metadata": {},
-                    "output_type": "execute_result"
-                },
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "t=2025-12-21T17:51:19+0700 lvl=warn msg=\"failed to check for update\" obj=updater err=\"Post \\\"https://update.equinox.io/check\\\": context deadline exceeded\"\n"
+                    "ename": "ModuleNotFoundError",
+                    "evalue": "No module named 'requests'",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+                        "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+                        "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# ================= CELL 2: SETUP SERVER & BLYNK =================\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrequests\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Cấu hình Server\u001b[39;00m\n\u001b[32m      4\u001b[39m SERVER_URL = \u001b[33m\"\u001b[39m\u001b[33mhttp://192.168.1.100:8000\u001b[39m\u001b[33m\"\u001b[39m\n",
+                        "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'requests'"
                     ]
                 }
             ],
             "source": [
-                "# ================= CELL 2: SETUP NGROK & BLYNK =================\n",
-                "from pyngrok import ngrok, conf\n",
+                "# ================= CELL 2: SETUP SERVER & BLYNK =================\n",
                 "import requests\n",
-                "\n",
-                "# Cấu hình Token\n",
-                "NGROK_TOKEN = \"3798DaGJWoVDQLNiGsf2RUnvSkv_7MV7pdtCjMGaJ22WbxnLh\"\n",
+                "# Cấu hình Server\n",
+                "SERVER_URL = \"http://192.168.1.100:8000\"\n",
                 "BLYNK_TOKEN = \"cE6rY7CdzQ5IvWtj2QhbKzhdNTV-F1tq\"\n",
                 "BLYNK_VPIN = \"V1\"\n",
-                "\n",
-                "def setup_tunnel():\n",
-                "    print(\"Đang khởi tạo Ngrok & cập nhật Blynk...\")\n",
+                "def setup_blynk():\n",
+                "    print(\"Đang cập nhật Blynk với server cá nhân...\")\n",
                 "    print(\"=\"*50)\n",
+                "    print(f\"Server URL: {SERVER_URL}\")\n",
+                "    print(f\"Link Video: {SERVER_URL}/video\")\n",
                 "    \n",
-                "    # Cài đặt token\n",
-                "    conf.get_default().auth_token = NGROK_TOKEN\n",
-                "    \n",
-                "    # Đóng các tunnel cũ\n",
-                "    for tunnel in ngrok.get_tunnels():\n",
-                "        ngrok.disconnect(tunnel.public_url)\n",
-                "    \n",
-                "    # Mở tunnel mới port 8000\n",
-                "    try:\n",
-                "        public_url = ngrok.connect(8000).public_url\n",
-                "        print(f\"Ngrok Tunnel: {public_url}\")\n",
-                "        print(f\"Link Video: {public_url}/video\")\n",
-                "    except Exception as e:\n",
-                "        print(f\"Lỗi Ngrok: {e}\")\n",
-                "        return None\n",
-                "\n",
                 "    # Cập nhật Blynk\n",
                 "    blynk_update_url = \"https://blynk.cloud/external/api/update\"\n",
                 "    params = {\n",
                 "        \"token\": BLYNK_TOKEN,\n",
-                "        BLYNK_VPIN: f\"{public_url}/video\"\n",
+                "        BLYNK_VPIN: f\"{SERVER_URL}/video\"\n",
                 "    }\n",
                 "    \n",
                 "    try:\n",
                 "        requests.get(blynk_update_url, params=params, timeout=5)\n",
-                "        print(f\"✅ Đã cập nhật Widget Video ({BLYNK_VPIN}) trên Blynk!\")\n",
+                "        print(f\"Đã cập nhật Widget Video ({BLYNK_VPIN}) trên Blynk!\")\n",
                 "    except Exception as e:\n",
-                "        print(f\"⚠️  Lỗi cập nhật Blynk: {e}\")\n",
+                "        print(f\"Lỗi cập nhật Blynk: {e}\")\n",
                 "        \n",
                 "    print(\"=\"*50)\n",
-                "    print(\"🎉 Setup hoàn tất! Chạy CELL 3 để bắt đầu phát hiện.\")\n",
-                "    return public_url\n",
-                "\n",
+                "    print(\"Setup hoàn tất! Chạy CELL 3 để bắt đầu phát hiện.\")\n",
+                "    return SERVER_URL\n",
                 "# Chạy setup\n",
-                "setup_tunnel()"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 23,
-            "id": "run-detection",
-            "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "🔄 Đang khởi tạo hệ thống phát hiện...\n",
-                        "✅ Đã load YOLO11n model\n",
-                        "🚀 Bắt đầu phát hiện...\n",
-                        "✅ Flask server đang chạy trên port 8000\n",
-                        " * Serving Flask app 'detection_system'\n",
-                        " * Debug mode: off\n"
-                    ]
-                },
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
-                        " * Running on all addresses (0.0.0.0)\n",
-                        " * Running on http://127.0.0.1:8000\n",
-                        " * Running on http://10.0.14.200:8000\n",
-                        "Press CTRL+C to quit\n"
-                    ]
-                },
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "✅ Camera đã sẵn sàng\n",
-                        "==================================================\n",
-                        "⚠️  Nhấn 'q' để dừng\n",
-                        "==================================================\n",
-                        "🚨 PHÁT HIỆN 2 NGƯỜI! (Confidence: 0.91)\n",
-                        "💾 Đã lưu: person_2025-12-21_18-06-03.jpg\n",
-                        "💾 Đã lưu vào database\n",
-                        "✅ Đã gửi Telegram\n",
-                        "🚨 PHÁT HIỆN 2 NGƯỜI! (Confidence: 0.86)\n",
-                        "💾 Đã lưu: person_2025-12-21_18-06-08.jpg\n",
-                        "💾 Đã lưu vào database\n",
-                        "✅ Đã gửi Telegram\n",
-                        "🚨 PHÁT HIỆN 2 NGƯỜI! (Confidence: 0.90)\n",
-                        "💾 Đã lưu: person_2025-12-21_18-06-13.jpg\n",
-                        "💾 Đã lưu vào database\n",
-                        "✅ Đã gửi Telegram\n",
-                        "🚨 PHÁT HIỆN 2 NGƯỜI! (Confidence: 0.90)\n",
-                        "💾 Đã lưu: person_2025-12-21_18-06-18.jpg\n",
-                        "💾 Đã lưu vào database\n",
-                        "✅ Đã gửi Telegram\n",
-                        "🚨 PHÁT HIỆN 2 NGƯỜI! (Confidence: 0.90)\n",
-                        "💾 Đã lưu: person_2025-12-21_18-06-23.jpg\n",
-                        "💾 Đã lưu vào database\n",
-                        "✅ Đã gửi Telegram\n",
-                        "🚨 PHÁT HIỆN 2 NGƯỜI! (Confidence: 0.90)\n",
-                        "💾 Đã lưu: person_2025-12-21_18-06-29.jpg\n",
-                        "💾 Đã lưu vào database\n",
-                        "✅ Đã gửi Telegram\n",
-                        "🚨 PHÁT HIỆN 2 NGƯỜI! (Confidence: 0.92)\n",
-                        "💾 Đã lưu: person_2025-12-21_18-06-34.jpg\n",
-                        "💾 Đã lưu vào database\n",
-                        "✅ Đã gửi Telegram\n",
-                        "\n",
-                        "🛑 Dừng hệ thống...\n",
-                        "✅ Đã dừng hệ thống\n"
-                    ]
-                }
-            ],
-            "source": [
-                "# ================= CELL 3: CHẠY HỆ THỐNG PHÁT HIỆN =================\n",
-                "from detection_system import run_detection_system\n",
-                "# Chạy với cửa sổ OpenCV (nhấn 'q' để dừng)\n",
-                "run_detection_system(show_window=True)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "788bdee4",
-            "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "📊 Tổng số bản ghi: 18\n"
-                    ]
-                },
-                {
-                    "data": {
-                        "text/html": [
-                            "<div>\n",
-                            "<style scoped>\n",
-                            "    .dataframe tbody tr th:only-of-type {\n",
-                            "        vertical-align: middle;\n",
-                            "    }\n",
-                            "\n",
-                            "    .dataframe tbody tr th {\n",
-                            "        vertical-align: top;\n",
-                            "    }\n",
-                            "\n",
-                            "    .dataframe thead th {\n",
-                            "        text-align: right;\n",
-                            "    }\n",
-                            "</style>\n",
-                            "<table border=\"1\" class=\"dataframe\">\n",
-                            "  <thead>\n",
-                            "    <tr style=\"text-align: right;\">\n",
-                            "      <th></th>\n",
-                            "      <th>Person</th>\n",
-                            "      <th>Datetime</th>\n",
-                            "      <th>Confidence</th>\n",
-                            "    </tr>\n",
-                            "  </thead>\n",
-                            "  <tbody>\n",
-                            "    <tr>\n",
-                            "      <th>0</th>\n",
-                            "      <td>2</td>\n",
-                            "      <td>2025-12-21 18:06:34</td>\n",
-                            "      <td>91.6%</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>1</th>\n",
-                            "      <td>2</td>\n",
-                            "      <td>2025-12-21 18:06:29</td>\n",
-                            "      <td>90.0%</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>2</th>\n",
-                            "      <td>2</td>\n",
-                            "      <td>2025-12-21 18:06:23</td>\n",
-                            "      <td>90.1%</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>3</th>\n",
-                            "      <td>2</td>\n",
-                            "      <td>2025-12-21 18:06:18</td>\n",
-                            "      <td>90.5%</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>4</th>\n",
-                            "      <td>2</td>\n",
-                            "      <td>2025-12-21 18:06:13</td>\n",
-                            "      <td>90.0%</td>\n",
-                            "    </tr>\n",
-                            "  </tbody>\n",
-                            "</table>\n",
-                            "</div>"
-                        ],
-                        "text/plain": [
-                            "   Person             Datetime Confidence\n",
-                            "0       2  2025-12-21 18:06:34      91.6%\n",
-                            "1       2  2025-12-21 18:06:29      90.0%\n",
-                            "2       2  2025-12-21 18:06:23      90.1%\n",
-                            "3       2  2025-12-21 18:06:18      90.5%\n",
-                            "4       2  2025-12-21 18:06:13      90.0%"
-                        ]
-                    },
-                    "metadata": {},
-                    "output_type": "display_data"
-                },
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "\n",
-                        "✅ Đã export xong: detections_export.csv\n"
-                    ]
-                }
-            ],
-            "source": [
-                "import pandas as pd\n",
-                "from database import db\n",
-                "from IPython.display import display\n",
-                "\n",
-                "# Lấy dữ liệu từ database\n",
-                "records = db.get_all_detections()\n",
-                "\n",
-                "if not records:\n",
-                "    print(\" Không có dữ liệu.\")\n",
-                "else:\n",
-                "    # 1. Load dữ liệu & Chọn cột\n",
-                "    df = pd.DataFrame(records, columns=['Person', 'Datetime', 'Confidence', 'Image_Path'])\n",
-                "    df = df[['Person', 'Datetime', 'Confidence']]\n",
-                "    \n",
-                "    # 2. Format Confidence (VD: 0.908 -> 90.8%)\n",
-                "    # Nhân 100 và lấy 1 số thập phân\n",
-                "    df['Confidence'] = (df['Confidence'] * 100).map('{:.1f}%'.format)\n",
-                "    \n",
-                "    # 3. Hiển thị xem trước\n",
-                "    print(f\"📊 Tổng số bản ghi: {len(df)}\")\n",
-                "    display(df.head())\n",
-                "    \n",
-                "    # 4. Xuất ra CSV\n",
-                "    df.to_csv('detections_export.csv', index=False)\n",
-                "    print(\"\\n✅ Đã export xong: detections_export.csv\")"
+                "setup_blynk()"
             ]
         }
     ],
